// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserListItem renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomWidth": 0.5,
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
    testID="RNE__LISTITEM__padView"
  >
    <View
      style={
        Array [
          Object {
            "marginRight": 16,
          },
          Object {
            "alignSelf": "flex-start",
            "marginRight": 16,
          },
        ]
      }
    >
      ProfileIcon
    </View>
    <View
      style={
        Object {
          "paddingLeft": 16,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
      theme={
        Object {
          "colors": Object {
            "background": "#ffffff",
            "black": "#242424",
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": Object {
              "android": Object {
                "error": "#f44336",
                "grey": "rgba(0, 0, 0, 0.54)",
                "primary": "#2196f3",
                "searchBg": "#dcdce1",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "default": Object {
                "error": "#ff3b30",
                "grey": "#7d7d7d",
                "primary": "#007aff",
                "searchBg": "#dcdce1",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
              "ios": Object {
                "error": "#ff3b30",
                "grey": "#7d7d7d",
                "primary": "#007aff",
                "searchBg": "#dcdce1",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
              "web": Object {
                "error": "#ff190c",
                "grey": "#393e42",
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#ca71eb",
                "success": "#52c41a",
                "warning": "#faad14",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#03dac4",
            "success": "#52c41a",
            "warning": "#faad14",
            "white": "#ffffff",
          },
          "spacing": Object {
            "lg": 12,
            "md": 8,
            "sm": 4,
            "xl": 24,
            "xs": 2,
          },
        }
      }
    >
      <Text
        accessibilityRole="text"
        numberOfLines={1}
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "textAlign": "left",
          }
        }
        testID="listItemTitle"
      >
        PublicKey
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": 16,
          }
        }
      >
        <View
          style={
            Object {
              "marginRight": 16,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={Object {}}
          >
            <RNGestureHandlerButton
              collapsable={false}
              exclusive={true}
              handlerTag={5}
              handlerType="NativeViewGestureHandler"
              onGestureEvent={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              onHandlerStateChange={[Function]}
              rippleColor={0}
              touchSoundDisabled={false}
            >
              <View
                accessible={true}
                collapsable={false}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#3742fa",
                        "borderColor": "#3742fa",
                        "borderRadius": 8,
                        "borderWidth": 1,
                        "padding": 8,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#000",
                          "fontSize": 20,
                          "lineHeight": 26,
                          "textAlign": "left",
                        },
                        Object {
                          "textAlign": "center",
                        },
                        Object {
                          "color": "#fff",
                        },
                      ]
                    }
                  >
                    Follow
                  </Text>
                </View>
              </View>
            </RNGestureHandlerButton>
          </View>
        </View>
        <View
          style={
            Object {
              "marginRight": 16,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={Object {}}
          >
            <RNGestureHandlerButton
              collapsable={false}
              exclusive={true}
              handlerTag={6}
              handlerType="NativeViewGestureHandler"
              onGestureEvent={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              onHandlerStateChange={[Function]}
              rippleColor={0}
              touchSoundDisabled={false}
            >
              <View
                accessible={true}
                collapsable={false}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#3742fa",
                        "borderColor": "#3742fa",
                        "borderRadius": 8,
                        "borderWidth": 1,
                        "padding": 8,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#000",
                          "fontSize": 20,
                          "lineHeight": 26,
                          "textAlign": "left",
                        },
                        Object {
                          "textAlign": "center",
                        },
                        Object {
                          "color": "#fff",
                        },
                      ]
                    }
                  >
                    Profile
                  </Text>
                </View>
              </View>
            </RNGestureHandlerButton>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`UserListItem renders correctly after clicking on follow 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomWidth": 0.5,
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
    testID="RNE__LISTITEM__padView"
  >
    <View
      style={
        Array [
          Object {
            "marginRight": 16,
          },
          Object {
            "alignSelf": "flex-start",
            "marginRight": 16,
          },
        ]
      }
    >
      ProfileIcon
    </View>
    <View
      style={
        Object {
          "paddingLeft": 16,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
      theme={
        Object {
          "colors": Object {
            "background": "#ffffff",
            "black": "#242424",
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": Object {
              "android": Object {
                "error": "#f44336",
                "grey": "rgba(0, 0, 0, 0.54)",
                "primary": "#2196f3",
                "searchBg": "#dcdce1",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "default": Object {
                "error": "#ff3b30",
                "grey": "#7d7d7d",
                "primary": "#007aff",
                "searchBg": "#dcdce1",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
              "ios": Object {
                "error": "#ff3b30",
                "grey": "#7d7d7d",
                "primary": "#007aff",
                "searchBg": "#dcdce1",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
              "web": Object {
                "error": "#ff190c",
                "grey": "#393e42",
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#ca71eb",
                "success": "#52c41a",
                "warning": "#faad14",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#03dac4",
            "success": "#52c41a",
            "warning": "#faad14",
            "white": "#ffffff",
          },
          "spacing": Object {
            "lg": 12,
            "md": 8,
            "sm": 4,
            "xl": 24,
            "xs": 2,
          },
        }
      }
    >
      <Text
        accessibilityRole="text"
        numberOfLines={1}
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "textAlign": "left",
          }
        }
        testID="listItemTitle"
      >
        PublicKey
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": 16,
          }
        }
      >
        <View
          style={
            Object {
              "marginRight": 16,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={Object {}}
          >
            <RNGestureHandlerButton
              collapsable={false}
              exclusive={true}
              handlerTag={7}
              handlerType="NativeViewGestureHandler"
              onGestureEvent={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              onHandlerStateChange={[Function]}
              rippleColor={0}
              touchSoundDisabled={false}
            >
              <View
                accessible={true}
                collapsable={false}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#3742fa",
                        "borderColor": "#3742fa",
                        "borderRadius": 8,
                        "borderWidth": 1,
                        "padding": 8,
                      },
                      Object {
                        "backgroundColor": "#8E8E8E",
                        "borderColor": "#8E8E8E",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#000",
                          "fontSize": 20,
                          "lineHeight": 26,
                          "textAlign": "left",
                        },
                        Object {
                          "textAlign": "center",
                        },
                        Object {
                          "color": "#fff",
                        },
                      ]
                    }
                  >
                    Follow
                  </Text>
                </View>
              </View>
            </RNGestureHandlerButton>
          </View>
        </View>
        <View
          style={
            Object {
              "marginRight": 16,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={Object {}}
          >
            <RNGestureHandlerButton
              collapsable={false}
              exclusive={true}
              handlerTag={8}
              handlerType="NativeViewGestureHandler"
              onGestureEvent={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              onHandlerStateChange={[Function]}
              rippleColor={0}
              touchSoundDisabled={false}
            >
              <View
                accessible={true}
                collapsable={false}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#3742fa",
                        "borderColor": "#3742fa",
                        "borderRadius": 8,
                        "borderWidth": 1,
                        "padding": 8,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#000",
                          "fontSize": 20,
                          "lineHeight": 26,
                          "textAlign": "left",
                        },
                        Object {
                          "textAlign": "center",
                        },
                        Object {
                          "color": "#fff",
                        },
                      ]
                    }
                  >
                    Profile
                  </Text>
                </View>
              </View>
            </RNGestureHandlerButton>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
